--- a/frontend_end_user/amplify.yml
+++ b/frontend_end_user/amplify.yml
@@ -1,19 +1,20 @@
 version: 1
 frontend:
+  appRoot: frontend_end_user
   phases:
     preBuild:
       commands:
-        - nvm install 20 # Install Node.js version 20
-        - nvm use 20 # Use Node.js version 20
-        - npm ci --cache .npm --prefer-offline # Install dependencies
+        - nvm install 20
+        - nvm use 20
+        - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - npm run build # Build the application
+        - npm run build
   artifacts:
-    baseDirectory: build # Location of the built files
+    baseDirectory: build
     files:
-      - '**/*' # Include all files in the build directory
+      - '**/*'
   cache:
     paths:
-      - node_modules/**/* # Cache node_modules
-      - .npm # Cache npm cache
+      - node_modules/**/* 
+      - .npm
