--- a/frontend_end_user/amplify.yml
+++ b/frontend_end_user/amplify.yml
@@ -1,20 +1,21 @@
 version: 1
-frontend:
-  appRoot: frontend_end_user
-  phases:
-    preBuild:
-      commands:
-        - nvm install 20
-        - nvm use 20
-        - npm ci --cache .npm --prefer-offline
-    build:
-      commands:
-        - npm run build
-  artifacts:
-    baseDirectory: build
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/* 
-      - .npm
+applications:
+  - appRoot: frontend_end_user
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - nvm install 20
+            - nvm use 20
+            - npm ci --cache .npm --prefer-offline
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: build
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/* 
+          - .npm
