--- a/frontend_restaurant_admin/package.json
+++ b/frontend_restaurant_admin/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
