--- a/backend_software/requirements.txt
+++ b/backend_software/requirements.txt
@@ -1,6 +1,9 @@
 Flask==2.2.5
 Flask-PyMongo==2.3.0
 Flask-Cors==3.0.10
+Flask-SocketIO==5.3.5
 qrcode==7.3
 pytz==2023.3
 pillow==9.3.0
+bson==0.5.10
+pyusb==1.2.1
