--- a/frontend_end_user/package.json
+++ b/frontend_end_user/package.json
@@ -7,17 +7,20 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "cross-env": "^7.0.3",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "sitemap": "^8.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node scripts/generateSitemap.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
