--- a/frontend_end_user/package.json
+++ b/frontend_end_user/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "prebuild": "node scripts/generateSitemap.js",
     "start": "react-scripts start",
-    "build": "node scripts/generateSitemap.js && react-scripts build && copy public\\sitemap.xml build\\sitemap.xml",
+    "build": "node scripts/generateSitemap.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
